--- a/davewhipp.css
+++ b/davewhipp.css
@@ -190,6 +190,7 @@ h1 {
 
 .par-head {
 	display: flex;
+	flex-flow: row wrap;
 	justify-content: space-between;
 	align-items: center;
 	margin: 0.5rem;
